--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gstreamer1.0-imx (0.10.2+nmu1) stable; urgency=medium
+
+  * update to 0.11.1
+
+ -- Josua Mayer <privacy@not.given>  Thu, 13 Aug 2015 22:09:35 +0800
+
 gstreamer1.0-imx (0.10.2) stable; urgency=medium
 
   * update to 0.10.2
