--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gstreamer1.0-imx (0.11.1pkg1) stable; urgency=medium
+
+  * use update-alternatives
+
+ -- Josua Mayer <josua@linux.site>  Sun, 06 Sep 2015 14:36:02 +0000
+
 gstreamer1.0-imx (0.11.1) stable; urgency=medium
 
   * update to 0.11.1
