--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gstreamer1.0-imx (0.11.1pkg2) UNRELEASED; urgency=medium
+
+  * update
+
+ -- Josua Mayer <josua@linux.site>  Sat, 14 Nov 2015 16:02:01 +0000
+
 gstreamer1.0-imx (0.11.1pkg1) stable; urgency=medium
 
   * use update-alternatives
