--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gstreamer1.0-imx (0.12.2+15+gc537ce9) stable; urgency=medium
+
+  * Non-maintainer upload.
+  * update to current git as 0.12.2 does not build 
+  * version string generated using `git describe --tags`
+
+ -- Josua Mayer <josua@cubox>  Thu, 06 Oct 2016 13:24:41 +0000
+
 gstreamer1.0-imx (0.12.0) stable; urgency=medium
 
   * update
