--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gstreamer1.0-imx (0.12.3) stable; urgency=medium
+
+  * Non-maintainer upload.
+  * update to latest release
+
+ -- Josua Mayer <josua@localhost>  Fri, 09 Dec 2016 13:02:05 +0100
+
 gstreamer1.0-imx (0.12.2+15+gc537ce9) stable; urgency=medium
 
   * Non-maintainer upload.
